[tool.poetry]
name = "peptide-match"
version = "0.1.0"
description = ""
authors = ["Joachim Holwech <joachim.holwech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.60.0"
ahocorapy = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
